temp/objects/Reinsurance_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account_Basis__c</fullName>
        <label>Account Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit Premium</fullName>
                </value>
                <value>
                    <fullName>Account Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Aggregate_Cap_Method__c</fullName>
        <label>Contract Aggregate Cap Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Aggregate_Cap_Percentage__c</fullName>
        <label>Contract Aggregate Cap Percentage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Aggregate_Cap__c</fullName>
        <label>Contract Aggregate Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Major_Class__c</fullName>
        <label>Major Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Major_Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reinsurance Contracts</relationshipLabel>
        <relationshipName>Reinsurance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subclass__c</fullName>
        <label>Subclass</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Major_Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Subclass</valueSetName>
        </valueSet>
    </fields>
    <label>Reinsurance Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SMARRT_Reinsurance_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Basis__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Major_Class__c</columns>
        <columns>Subclass__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>SMARRT Reinsurance Contracts</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{000000000}</displayFormat>
        <label>Reinsurance Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reinsurance Contracts</pluralLabel>
    <recordTypes>
        <fullName>Insurance</fullName>
        <active>true</active>
        <label>Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reinsurance</fullName>
        <active>true</active>
        <label>Reinsurance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>